# sendout

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: main.yaml
src/: api.rs  config.rs  email.rs  error.rs  execute.rs  lib.rs  macros.rs  postmark.rs  service.rs
src/email/: delivery.rs  message.rs  request.rs  response.rs  single_email.rs
src/postmark/: client.rs  request.rs  response.rs
src/postmark/client/: reqwest.rs
src/snapshots/: sendout__service__tests__send_email_fails.snap  sendout__service__tests__send_email_successfully.snap  sendout__tests__send_email_fails.snap  sendout__tests__send_email_successfully.snap
tests/: app.rs  postmark.rs
tests/postmark/: email_service.rs  mod.rs
