[package]
name = "sendout"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "secrecy/serde"]

[dependencies]
async-trait = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "2"


[lints.clippy]
allow_attributes_without_reason = "warn"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
panic_in_result_fn = "warn"
too_long_first_doc_paragraph = "warn"
unused_self = "deny"
unwrap_used = "deny"

[lints.rust]
missing_docs = "warn"
non_snake_case = "allow"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused_import_braces = "warn"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
