[package]
name = "sendout"
version = "0.1.0"
edition = "2024"
authors = ["Sede Soukossi"]
description = "A library for sending emails from you application"
license = "MPL-2.0"
categories = ["email"]
keywords = ["email", "mailer", "message"]
repository = "https://github.com/aklanti/sendout"
rust-version = "1.93.0"

[package.metadata.docs.rs]
features = ["postmark", "test-util", "tracing"]

[features]
bon = ["dep:bon"]
garde = ["dep:garde"]
postmark = []
reqwest = ["dep:reqwest"]
test-util = []
tracing = ["dep:tracing"]

[dependencies]
async-trait = "0.1"
bon = { version = "3.8", optional = true }
bytes = "1"
garde = { version = "0.22", optional = true, features = ["derive", "email", "unicode", "url"] }
http = "1.4.0"
reqwest = { version = "0.13.2", optional = true, features = ["json"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.16"
thiserror = "2"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
googletest = "0.14"
insta = { version = "1.46", features = ["yaml"] }
serde_json = "1"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.clippy]
allow_attributes_without_reason = "warn"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
panic_in_result_fn = "warn"
too_long_first_doc_paragraph = "warn"
unused_self = "deny"
unwrap_used = "deny"

[lints.rust]
missing_docs = "warn"
non_snake_case = "allow"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused_import_braces = "warn"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
